--- a/gantt/templates/auth/login.html
+++ b/gantt/templates/auth/login.html
@@ -4,6 +4,8 @@
 
     <label for="password">Password:</label>
     <input id="password" name="password" type="password" value="" />
+
+    <input type="submit">
 </form>
 
 <p>Not got an account? <a href="/register">Register</a></p>
